Search Page Added

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -15,5 +15,25 @@
   "turkish": "Turkish",
   "add_user": "Add Account",
   "user_name": "User Name",
-  "view_profile": "View Profile"
+  "view_profile": "View Profile",
+  "light_mode" : "Light Mode",
+  "dark_mode" : "Dark Mode",
+  "picked_for_you" : "Picked For You",
+  "pop": "Pop",
+  "rock": "Rock",
+  "hip_hop": "Hip-Hop",
+  "jazz": "Jazz",
+  "classical": "Classical",
+  "electronic": "Electronic",
+  "r_b": "R&B",
+  "indie": "Indie",
+  "country": "Country",
+  "new_releases": "New Releases",
+  "trending": "Trending",
+  "discover_weekly": "Discover Weekly",
+  "chill": "Chill",
+  "dance": "Dance",
+  "browse_all" : "Browse All",
+  "cancel": "Cancel",
+  "recent_searches" : "Recent Searches"
 }
