--- a/assets/lang/tr.json
+++ b/assets/lang/tr.json
@@ -1,19 +1,39 @@
 {
-  "home":"Ana Sayfa",
+  "home": "Anasayfa",
   "search": "Arama",
-  "library": "Kutuphane",
+  "library": "Kütüphane",
   "settings": "Ayarlar",
-  "language": "Dil Secenekleri",
-  "theme": "Uygulama Temasi",
-  "all": "Tumu",
-  "musics": "Muzikler",
+  "language": "Dil Seçenekleri",
+  "theme": "Tema Ayarları",
+  "all": "Tümü",
+  "musics": "Müzikler",
   "podcasts": "Podcastler",
-  "jump_back_in": "Dinlemeye Geri Donun",
-  "recent_listened": "Yakinlarda Dinledikleriniz",
-  "new_releases_from": "Yeni Cikanlar: ",
-  "english": "Ingilizce",
-  "turkish": "Turkce",
-  "add_user": "Yeni Hesap Ekle",
-  "user_name": "Kullanici Adi",
-  "view_profile": "Profilime Git"
+  "jump_back_in": "Dinlemeye Devam Et",
+  "recent_listened": "Son Dinledikleriniz",
+  "new_releases_from": "Yeni Çıkanlar: ",
+  "english": "İngilizce",
+  "turkish": "Türkçe",
+  "add_user": "Yeni Kullanıcı Ekle",
+  "user_name": "Kullanıcı Adı",
+  "view_profile": "Profilime Git",
+  "light_mode": "Açık Tema",
+  "dark_mode": "Koyu Tema",
+  "picked_for_you": "Sizin İçin Seçtiklerimiz",
+  "pop": "Pop",
+  "rock": "Rock",
+  "hip_hop": "Hip-Hop",
+  "jazz": "Caz",
+  "classical": "Klasik",
+  "electronic": "Elektronik",
+  "r_b": "R&B",
+  "indie": "Bağımsız",
+  "country": "Country",
+  "new_releases": "Yeni Çıkanlar",
+  "trending": "Popüler",
+  "discover_weekly": "Haftalık Keşif",
+  "chill": "Rahatlatıcı",
+  "dance": "Dans",
+  "browse_all" : "Tumunu Goruntule",
+  "cancel" : "Vazgec",
+  "recent_searches" : "Son Aramalar"
 }
